--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -36,3 +36,11 @@ set -g @plugin 'egel/tmux-gruvbox'
 set -g @tmux-gruvbox 'dark' # or 'light'
 
 run '~/.tmux/plugins/tpm/tpm'
+
+set -g default-terminal "xterm-256color"
+
+set-option -sa terminal-features ',xterm-256color:RGB'
+
+set-option -g default-terminal "tmux-256color"
+
+set-option -ga terminal-features ",xterm-256color:usstyle"
